# resume-tailorer

./: .env.example  .gitignore  README.md  pyproject.toml  template.tex
resume_tailor/: __init__.py
resume_tailor/ai/: llm_client.py  prompts.py  schemas.py
resume_tailor/cli/: __main__.py  app.py  config.py  profile.py  remotes.py  scan.py  tailor.py
resume_tailor/core/: content_generator.py  experience_generator.py  git_remote.py  job_fetcher.py  latex_editor.py  latex_parser.py  linkedin_generator.py  pdf_compiler.py  project_enricher.py  project_matcher.py  project_registry.py  project_scanner.py  reviewer.py  skills_generator.py
resume_tailor/models/: data_models.py
resume_tailor/utils/: config_manager.py  file_utils.py
